refactor register user

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,8 +14,8 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-success">
     <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/login-admin}">Login</a>
-        <a class="navbar-brand" th:href="@{/register-admin}">Register</a>
+        <a class="navbar-brand" th:href="@{/login}">Login</a>
+        <a class="navbar-brand" th:href="@{/register}">Register</a>
     </div>
 </nav>
 <br /><br />
