--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -14,7 +14,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-success">
   <div class="container-fluid">
     <a class="navbar-brand" th:href="@{/index}">Home</a>
-    <a class="navbar-brand" th:href="@{/Login}">Login</a>
+    <a class="navbar-brand" th:href="@{/login}">Login</a>
   </div>
 </nav>
 <br /><br /><br />
@@ -55,19 +55,18 @@
                th:if="${#fields.hasErrors('username')}"></p>
           </div>
 
-<!--          <div class="form-group mb-3">-->
-<!--            <label class="form-label">Last Name</label>-->
-<!--            <input-->
-<!--                    class="form-control"-->
-<!--                    id="lastName"-->
-<!--                    name="lastName"-->
-<!--                    placeholder="Enter last name"-->
-<!--                    th:field="*{lastName}"-->
-<!--                    type="text"-->
-<!--            />-->
-<!--            <p th:errors = "*{lastName}" class="text-danger"-->
-<!--               th:if="${#fields.hasErrors('lastName')}"></p>-->
-<!--          </div>-->
+          <div class="form-group mb-3">
+            <label class="form-label">Role</label>
+            <select>
+              <option th:each="role : ${T(com.zt.tripmanager.common.Role).values()}"
+                      th:value="${role}"
+                      th:field="*{role}"
+                      id="role"
+                      name="role"
+                      th:text="${role}">
+              </option>
+            </select>
+          </div>
 
           <div class="form-group mb-3">
             <label class="form-label">Email</label>
@@ -97,8 +96,8 @@
                th:if="${#fields.hasErrors('password')}"></p>
           </div>
           <div class="form-group">
-            <button class="btn btn-primary" type="submit">Register</button>
-            <span>Already registered? <a th:href="@{/loginn}">Login here</a></span>
+            <button class="btn btn-warning" type="submit">Register</button>
+            <span>Already registered? <a th:href="@{/login}">Login here</a></span>
           </div>
         </form>
       </div>
